Fixed: Removed extra margin between pinned tabs and panels

--- a/src/styles/themes/proton/sidebar/bar.pinned-tabs.styl
+++ b/src/styles/themes/proton/sidebar/bar.pinned-tabs.styl
@@ -49,8 +49,6 @@
   flex-wrap: wrap
   flex-direction: row
   grid-gap: var(--tabs-margin)
-  padding: var(--tabs-margin)
-#root[data-density="compact"][data-pinned-tabs-position="top"] .PinnedTabsBar
   padding: var(--tabs-margin) var(--tabs-margin) 0
 
 // ---
